@@ -3,11 +3,28 @@
 
 import inspect
 import copy
+from functools import wraps
 
 from trytond.i18n import gettext
 from trytond.model.fields.field import Field
 from trytond.tools import is_instance_method
 from trytond.transaction import Transaction
+
+
+def getter_context(func):
+    @wraps(func)
+    def wrapper(self, *args, **kwargs):
+        if not self.getter_with_context:
+            transaction = Transaction()
+            context = {
+                k: v for k, v in transaction.context.items()
+                if k in transaction.cache_keys}
+            with transaction.reset_context(), \
+                    transaction.set_context(context):
+                return func(self, *args, **kwargs)
+        else:
+            return func(self, *args, **kwargs)
+    return wrapper
 
 
 class Function(Field):
@@ -16,7 +33,7 @@ class Function(Field):
     '''
 
     def __init__(self, field, getter, setter=None, searcher=None,
-            loading='lazy'):
+            getter_with_context=True, loading='lazy'):
         '''
         :param field: The field of the function.
         :param getter: The name of the function for getting values.
@@ -29,6 +46,7 @@ class Function(Field):
         self._field = field
         self._type = field._type
         self.getter = getter
+        self.getter_with_context = getter_with_context
         self.setter = setter
         if not self.setter:
             self._field.readonly = True
@@ -41,11 +59,15 @@ class Function(Field):
 
     def __copy__(self):
         return Function(copy.copy(self._field), self.getter,
-            setter=self.setter, searcher=self.searcher, loading=self.loading)
+            setter=self.setter, searcher=self.searcher,
+            getter_with_context=self.getter_with_context,
+            loading=self.loading)
 
     def __deepcopy__(self, memo):
         return Function(copy.deepcopy(self._field, memo), self.getter,
-            setter=self.setter, searcher=self.searcher, loading=self.loading)
+            setter=self.setter, searcher=self.searcher,
+            getter_with_context=self.getter_with_context,
+            loading=self.loading)
 
     def __getattr__(self, name):
         return getattr(self._field, name)
@@ -81,6 +103,7 @@ class Function(Field):
                 'ir.msg_search_function_missing',
                 **Model.__names__(self.name)))
 
+    @getter_context
     def get(self, ids, Model, name, values=None):
         '''
         Call the getter.
