@@ -1,3 +1,4 @@
+* Cache Function field getter without context in readonly transactions
 * Use expire delay instead of UTC datetime in reset password email
 * Use RENAME and DROP COLUMN with SQLite backend
 * Support window functions with SQLite backend
